--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,12 +85,18 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    signingConfigs {
+        signingConfigs {
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        }
+        release {
+            storeFile file('my-release-key.keystore')
+            storePassword 'your-keystore-password'
+            keyAlias 'my-key-alias'
+            keyPassword 'your-key-password'
         }
     }
     buildTypes {
@@ -98,13 +104,13 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
+            shrinkResources false
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+
 }
 
 dependencies {
