--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,10 +93,10 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file('my-release-key.keystore')
-            storePassword 'your-keystore-password'
-            keyAlias 'my-key-alias'
-            keyPassword 'your-key-password'
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
     }
     buildTypes {
